--- a/dashboard-ui/src/index.css
+++ b/dashboard-ui/src/index.css
@@ -2,4 +2,15 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  width: 100%;
+}
+.root{
+  width: 100%;
+  text-align: center;
+}
+
+.app{
+  width: 100%;
+  text-align: center;
+
 }
