--- a/dashboard-ui/src/routes/dashboard/routes/landing/landing.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/landing/landing.scss
@@ -1,4 +1,8 @@
-.map{
-  border: 3px solid blue;
-  width: 50%;
+.maps-container{
+  margin: 0 auto;
+  width: 100%;
+}
+.map-container{
+  width: 40%;
+  float: left;
 }
