--- a/dashboard-ui/src/components/map.scss
+++ b/dashboard-ui/src/components/map.scss
@@ -1,5 +1,5 @@
-svg{
-  pointer-events: all;
+svg, g, path{
+  pointer-events:fill;
 
 }
 
@@ -10,4 +10,13 @@ path.clickeable{
 .background{
   background-color: #EEE;
   fill:#EEE;
+}
+
+
+.tooltip{
+  border: 1px solid #FFF;
+  position: absolute;
+  background-color: #CCC;
+  padding: 4px;
+  border-radius: 7px;
 }
