--- a/dashboard-ui/src/index.css
+++ b/dashboard-ui/src/index.css
@@ -1,16 +1,7 @@
-body {
+body , html{
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   width: 100%;
-}
-.root{
-  width: 100%;
-  text-align: center;
-}
-
-.app{
-  width: 100%;
-  text-align: center;
-
+  height: 100%;
 }
