--- a/dashboard-ui/src/routes/dashboard/routes/landing/landing.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/landing/landing.scss
@@ -1,8 +1,10 @@
-.maps-container{
-  margin: 0 auto;
-  width: 100%;
+.maps-container {
+  clear: both;
 }
-.map-container{
-  width: 40%;
+
+.map-container {
   float: left;
+}
+.infoBlock{
+  
 }
