--- a/dashboard-ui/src/routes/dashboard/routes/landing/landing.css
+++ b/dashboard-ui/src/routes/dashboard/routes/landing/landing.css
@@ -3,3 +3,10 @@
 
 .map-container {
   float: left; }
+
+.infoBlock {
+  display: inline-block;
+  float: left;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 10px; }
