--- a/dashboard-ui/src/routes/dashboard/routes/landing/landing.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/landing/landing.scss
@@ -6,5 +6,9 @@
   float: left;
 }
 .infoBlock{
-  
+  display: inline-block;
+  float: left;
+  border: 1px solid #ccc;
+	padding: 10px;
+	margin: 10px; 
 }
