--- a/dashboard-ui/src/components/map.scss
+++ b/dashboard-ui/src/components/map.scss
@@ -20,3 +20,12 @@ path.clickeable{
   padding: 4px;
   border-radius: 7px;
 }
+
+.map-container{
+	image{
+		z-index: 1000;
+	}
+	g{
+		z-index: 1005;
+	}
+}
