--- a/dashboard-ui/src/components/map.scss
+++ b/dashboard-ui/src/components/map.scss
@@ -7,6 +7,10 @@ path.clickeable{
   cursor: pointer;
 }
 
+circle.clickeable{
+  cursor: pointer;
+}
+
 .background{
   background-color: #EEE;
   fill:#EEE;
