report text search

--- a/dashboard-ui/src/layouts/layout.css
+++ b/dashboard-ui/src/layouts/layout.css
@@ -21,3 +21,7 @@
     float: right;
     margin-right: 100px;
     line-height: 80px; }
+    .app .header .lang-selector select {
+      width: 80px;
+      border: none;
+      color: #2196F3; }
