--- a/dashboard-ui/src/layouts/layout.scss
+++ b/dashboard-ui/src/layouts/layout.scss
@@ -26,6 +26,11 @@
 			float: right;
 			margin-right: 100px;
     		line-height: 80px;
+    		select{
+    			width: 80px;
+			    border: none;
+			    color: #2196F3;
+    		}
 		}
 	}
 }
