--- a/dashboard-ui/src/routes/dashboard/routes/generator/generator.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/generator/generator.scss
@@ -1,5 +1,34 @@
 
 .report-generator-container {
+	background: #f7f3f3;
+	padding-top: 50px;
+	padding-bottom: 75px;
+	>div{
+		width: 1200px;
+	    max-width: 1200px;
+	    align-items: center;
+	    margin: auto;
+	}
+	.report-generator-paragraph{
+		
+	    span{
+	    	font-size: 25px;
+		    color: #b59666;
+		    margin-bottom: 50px;
+	    }
+	    .highlighted-ward{
+	    	text-transform: capitalize;
+	    	color: #0aa3ec;
+	    }
+	    .highlighted-facility{
+	    	text-transform: capitalize;
+	    	color: #ca1717;
+	    }
+	}
+	.dashed-separator{
+		border-bottom: 2px dashed #ada8a8;
+		margin: 35px 0px;
+	}
 	.generator-by-path {
 		width: 1200px;
 	    max-width: 1200px;
@@ -48,6 +77,7 @@
 		}
 		.generator-dropdowns{
 			width: 350px;
+			background: white;
 			>div{
 				padding: 12px 35px;
 			}
@@ -60,6 +90,7 @@
 	          border-radius: 4px;
 	          font-size: 12px;
 	          margin-left: 5px;
+	          background: #f7f3f3;
 	        }
 	        .dropdown-title{
 	        	font-size: 13px;
