--- a/dashboard-ui/src/routes/dashboard/routes/report/report.css
+++ b/dashboard-ui/src/routes/dashboard/routes/report/report.css
@@ -249,3 +249,50 @@
     .deaths-box .value-item div:last-child {
       font-size: 20px;
       color: #6D7280; }
+
+.map {
+  height: 450px;
+  width: 600px;
+  overflow: hidden; }
+  .map .map-container {
+    float: none; }
+  .map .legend-box:hover {
+    opacity: 1; }
+  .map .legend-box {
+    height: 128px;
+    width: 265px;
+    background: #F1F1F1;
+    position: relative;
+    border: 1px solid #2c4856;
+    left: 300px;
+    bottom: 150px;
+    color: #2c4856;
+    opacity: 0.7; }
+    .map .legend-box .legend-title {
+      height: 25px;
+      padding: 10px; }
+    .map .legend-box .legend-item {
+      height: 20px;
+      padding: 2px 10px;
+      font-size: 13px; }
+      .map .legend-box .legend-item > div {
+        display: inline-block; }
+      .map .legend-box .legend-item .current-icon {
+        width: 10px;
+        height: 10px;
+        border: 1px solid #57595d;
+        border-radius: 10px;
+        background: #980707;
+        margin-right: 5px; }
+      .map .legend-box .legend-item .other-icon {
+        width: 10px;
+        height: 10px;
+        border: 1px solid #57595d;
+        border-radius: 10px;
+        background: #6C8EAD;
+        margin-right: 5px; }
+      .map .legend-box .legend-item .boundary-icon {
+        width: 10px;
+        border: 1px solid #9C8568;
+        margin-right: 5px;
+        margin-bottom: 4px; }
