--- a/dashboard-ui/src/routes/dashboard/layouts/share.scss
+++ b/dashboard-ui/src/routes/dashboard/layouts/share.scss
@@ -7,7 +7,7 @@
   padding-left: 3px;
   background-color: #F4F2EC;
   border:1px solid #2C4856;
-
+  padding-bottom: 3px;
 
 }
 
@@ -54,4 +54,99 @@
 
 .be {
   background-position: -144px -135px;
+}
+
+
+
+.copy-link-button {
+  font-family: monospace;
+  font-stretch: extra-expanded;
+  font-size: 13px;
+  $normal: white;
+  $hover: #0AA3EC;
+  $hover-text: white;
+  $clicked: blue;
+  $transition: 0.2s all ease-in-out;
+  border: 0px solid $normal;
+  border-radius: 100%;
+  text-decoration: none;
+  transition: $transition;
+  overflow: hidden;
+  border: 1px solid #EEE;
+  cursor: pointer;
+
+  height: 45px;
+  width: 45px;
+  .container {
+    position: relative;
+    height: 46px;
+    width: 46px;
+
+    .normal, .hover, .copied {
+      display: block;
+      text-align: center;
+      line-height: 46px;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      transition: $transition;
+    }
+
+    .normal {
+      opacity: 1;
+      color: $normal;
+      top: 0%;
+
+    }
+
+    .hover {
+      opacity: 0;
+      top: 100%;
+      color: $hover-text;
+
+    }
+
+     .copied {
+      opacity: 0;
+      top: 100%;
+      color: $hover-text;
+
+    }
+  }
+
+  &.normal{
+      background-color: #00A3D9;
+  }
+  &.hover {
+    background: #FFCE42;
+
+    .container {
+      .normal {
+        top: -100%;
+        opacity: 0;
+      }
+
+      .hover {
+        top: 0%;
+        opacity: 1;
+      }
+    }
+  }
+
+  &.copied {
+    background: #00B34A;
+
+
+    .container {
+      .normal, .hover {
+        top: -100%;
+      }
+
+      .copied {
+        top: 0%;
+        opacity: 1;
+        color: white;
+      }
+    }
+  }
 }
