--- a/dashboard-ui/src/routes/dashboard/routes/report/report.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/report/report.scss
@@ -1,395 +1,486 @@
-
-.facility-report-container{
+.facility-report-container {
 	width: 1150px;
-  max-width: 1150px;
-  align-items: center;
-  margin: auto;
-  overflow-x: auto;
+	max-width: 1150px;
+	align-items: center;
+	margin: auto;
+	overflow-x: auto;
 }
-.sub-title{
-  padding: 10px;
-  color: #2CA4C4;
-  font-size: 20px;
-  font-weight: bold;
+
+.sub-title {
+	padding: 10px;
+	color: #2CA4C4;
+	font-size: 20px;
+	font-weight: bold;
 }
-.report-header{
+
+.download {
+	display: block;
+	text-align: right;
+
+	a {
+		target:_blank;
+		color: #668DAA;
+		font-size: 11px;
+		text-decoration: none;
+	}
+
+	a:after {
+		content: "|";
+		margin: 3px;
+	}
+
+	a:nth-last-child(1):after {
+		content: ""
+	}
+}
+
+.report-header {
 	color: #2C4856;
-  font-size: 30px;
-  font-weight: bold;
-  border-top: 1px solid #CCC;
-  border-bottom: 4px solid #CCC;
-  padding-left: 26px;
-  height: 60px;
-  line-height: 60px;
-  margin-bottom: 20px;
-  background-color: #F4F2EC;
-	>div{
+	font-size: 30px;
+	font-weight: bold;
+	border-top: 1px solid #CCC;
+	border-bottom: 4px solid #CCC;
+	padding-left: 26px;
+	height: 60px;
+	line-height: 60px;
+	margin-bottom: 20px;
+	background-color: #F4F2EC;
+
+	> div {
 		display: inline-block;
 	}
-	.facility-name{
-	
+
+	.facility-name {}
+
+	.download {
+		border: 1px solid red;
 	}
-	.period-selector-container{
+
+	.period-selector-container {
 		float: right;
-    line-height: 45px;
-    >div{
-      >div{
-        display: inline-block;
-        line-height: 1px;
-        border-right: 1px solid #CCC;
-        margin-right: 50px; 
-        select{
-          padding-left: 12px;
-          width: 200px;
-          height: 31px;
-          border-color: #CCC;
-          color: #2C4856;
-          border-radius: 4px;
-          font-size: 12px;
-          margin-left: 20px;
-          margin-right: 20px;
-        }
-      }
-    }
+		line-height: 45px;
+
+		> div {
+			> div {
+				display: inline-block;
+				line-height: 1px;
+				border-right: 1px solid #CCC;
+				margin-right: 50px;
+
+				select {
+					padding-left: 12px;
+					width: 200px;
+					height: 31px;
+					border-color: #CCC;
+					color: #2C4856;
+					border-radius: 4px;
+					font-size: 12px;
+					margin-left: 20px;
+					margin-right: 20px;
+				}
+			}
+		}
 	}
 }
 
-.location-box{
-  >div{
-    width: calc(25% - 2px);
-    height: 50px;
-    background-color: #F4F2EC;
-    border-top: 2px solid #CCC;
-    border-bottom: 2px solid #CCC;
-  }
-  >div:not(:last-child){
-    border-right: 2px solid #CCC;
-  }
-  div{
-    display: inline-block;
-    line-height: 30px;
-    text-align: center;
-    color: #2C4856;
-  }
-  .location-title{
-    padding: 10px;
-    font-size: 13px;
-  }
-  .location-value{
-    font-weight: bold;
-  }
+.location-box {
+	> div {
+		width: calc(25% - 2px);
+		height: 50px;
+		background-color: #F4F2EC;
+		border-top: 2px solid #CCC;
+		border-bottom: 2px solid #CCC;
+	}
+
+	> div:not(:last-child) {
+		border-right: 2px solid #CCC;
+	}
+
+	div {
+		display: inline-block;
+		line-height: 30px;
+		text-align: center;
+		color: #2C4856;
+	}
+
+	.location-title {
+		padding: 10px;
+		font-size: 13px;
+	}
+
+	.location-value {
+		font-weight: bold;
+	}
 }
-.population-box{
-  font-weight: bold;
-  border-bottom: 3px solid #CCC;
-	>div{
+
+.population-box {
+	font-weight: bold;
+	border-bottom: 3px solid #CCC;
+
+	> div {
 		display: inline-block;
 		width: 50%;
-    vertical-align: text-top;
+		vertical-align: text-top;
 	}
-  .info >div{
-    padding: 10px;
-  }
-  .total-pop{
-    color: #2C4856;
-    font-size: 20px;
-    font-weight: bold;
-    span{
-      font-size: 30px;
-    }
-  }
-  .value-item{
-    display: inline-block;
-    padding: 14px;
-    border-right: 1px solid #CCC;
-  
-    div:first-child{
-      font-size: 14px;
-      color: #B4B5A8;
-    }
-    div:last-child{
-      font-size: 20px;
-      color: #6D7280;
-    }
-  }
-  .financing{
-    width: 80%;
-    .financing-header{
-      height: 40px;
-      text-align: center;
-      >div{
-        width: 33%;
-        display: inline-block;
-        border-bottom: 1px solid #CCC;
-        border-right: 1px solid #CCC;
-        font-size: 14px;
-        color: #B4B5A8;
-      }
-      >div:last-child{
-        border-right: none;
-      }
-    }
-    .financing-row{
-      height: 40px;
-      text-align: center;
-      >div:first-child{
-        font-size: 20px;
-        text-align: left;
-      }
-      >div{
-        width: 33%;
-        display: inline-block;
-        border-right: 1px solid #CCC;
-        color: #2C4856;
-        font-size: 30px;
-        font-weight: bold;
-        height: 40px;
-      }
-      >div:last-child{
-        border-right: none;
-        color: #6D7280;
-        span{
-          padding-left: 5px;
-          color: #cc1a1a;
-          font-size: 16px;
-        }
-      }
-    }
-  }
+
+	.info > div {
+		padding: 10px;
+	}
+
+	.total-pop {
+		color: #2C4856;
+		font-size: 20px;
+		font-weight: bold;
+
+		span {
+			font-size: 30px;
+		}
+	}
+
+	.value-item {
+		display: inline-block;
+		padding: 14px;
+		border-right: 1px solid #CCC;
+
+		div:first-child {
+			font-size: 14px;
+			color: #B4B5A8;
+		}
+
+		div:last-child {
+			font-size: 20px;
+			color: #6D7280;
+		}
+	}
+
+	.financing {
+		width: 80%;
+
+		.financing-header {
+			height: 40px;
+			text-align: center;
+
+			> div {
+				width: 33%;
+				display: inline-block;
+				border-bottom: 1px solid #CCC;
+				border-right: 1px solid #CCC;
+				font-size: 14px;
+				color: #B4B5A8;
+			}
+
+			> div:last-child {
+				border-right: none;
+			}
+		}
+
+		.financing-row {
+			height: 40px;
+			text-align: center;
+
+			> div:first-child {
+				font-size: 20px;
+				text-align: left;
+			}
+
+			> div {
+				width: 33%;
+				display: inline-block;
+				border-right: 1px solid #CCC;
+				color: #2C4856;
+				font-size: 30px;
+				font-weight: bold;
+				height: 40px;
+			}
+
+			> div:last-child {
+				border-right: none;
+				color: #6D7280;
+
+				span {
+					padding-left: 5px;
+					color: #cc1a1a;
+					font-size: 16px;
+				}
+			}
+		}
+	}
 }
 
-.top-ten-deseases{
-  padding-top: 30px;
-  font-weight: bold;
-  border-bottom: 3px solid #CCC;
-  .top-ten-diagnosis-table{
-    font-size: 20px;
-    table{
-      width: 100%;
-      text-align: center;
-      vertical-align: top;
-      border-collapse: collapse;
-    }
-    .diagnosis-header{
-      color: #135897;
-      border-bottom: 2px solid #CCC;
-    }
-    .previous-period-header{
-      color: #6D7280;
-    }
-    .current-period-header{
-      background-color: #F4F2EC;
-      color: #9C8568; 
-    }
-    .previous-period-sub-header{
-      color: #6D7280;
-      font-size: 14px;
-      border-bottom: 2px solid #CCC;
-    }
-    .current-period-sub-header-partial{
-      color: #B4B5A8;
-      font-size: 14px;
-      background-color: #F4F2EC;
-      border-bottom: 2px solid #CCC;
-    }
-    .current-period-sub-header{
-      color: #6D7280;
-      font-size: 14px;
-      background-color: #F4F2EC;
-      border-bottom: 2px solid #CCC;
-    }
-    .desease-name{
-      text-align: left;
-      color: #2C4856;
-    }
-    .prevoius-value{
-      color: #2C4856;
-    }
-    .current-value-partial{
-      color: #B4B5A8;
-      background-color: #F4F2EC;
-    }
-    .current-value{
-      color: #2C4856;
-      background-color: #F4F2EC;
-    }
-    .total-values{
-      td{
-        border-top: 2px solid #CCC;
-      }
-      .desease-name{
-        text-align: right;
-      }
-    }
-  }
+.top-ten-deseases {
+	padding-top: 30px;
+	font-weight: bold;
+	border-bottom: 3px solid #CCC;
+
+	.top-ten-diagnosis-table {
+		font-size: 20px;
+
+		table {
+			width: 100%;
+			text-align: center;
+			vertical-align: top;
+			border-collapse: collapse;
+		}
+
+		.diagnosis-header {
+			color: #135897;
+			border-bottom: 2px solid #CCC;
+		}
+
+		.previous-period-header {
+			color: #6D7280;
+		}
+
+		.current-period-header {
+			background-color: #F4F2EC;
+			color: #9C8568;
+		}
+
+		.previous-period-sub-header {
+			color: #6D7280;
+			font-size: 14px;
+			border-bottom: 2px solid #CCC;
+		}
+
+		.current-period-sub-header-partial {
+			color: #B4B5A8;
+			font-size: 14px;
+			background-color: #F4F2EC;
+			border-bottom: 2px solid #CCC;
+		}
+
+		.current-period-sub-header {
+			color: #6D7280;
+			font-size: 14px;
+			background-color: #F4F2EC;
+			border-bottom: 2px solid #CCC;
+		}
+
+		.desease-name {
+			text-align: left;
+			color: #2C4856;
+		}
+
+		.prevoius-value {
+			color: #2C4856;
+		}
+
+		.current-value-partial {
+			color: #B4B5A8;
+			background-color: #F4F2EC;
+		}
+
+		.current-value {
+			color: #2C4856;
+			background-color: #F4F2EC;
+		}
+
+		.total-values {
+			td {
+				border-top: 2px solid #CCC;
+			}
+
+			.desease-name {
+				text-align: right;
+			}
+		}
+	}
 }
 
-.RMNCH-box{
-  padding-top: 30px;
-  font-weight: bold;
-  border-bottom: 3px solid #CCC;
-  .RMNCH-table{
-    font-size: 20px;
-    table{
-      width: 100%;
-      text-align: center;
-      vertical-align: top;
-      border-collapse: collapse;
-    }
-    .diagnosis-header{
-      color: #135897;
-      border-bottom: 2px solid #CCC;
-    }
-    .previous-period-header{
-      color: #6D7280;
-    }
-    .current-period-header{
-      background-color: #F4F2EC;
-      color: #9C8568; 
-    }
-    .previous-period-sub-header{
-      color: #6D7280;
-      font-size: 14px;
-      border-bottom: 2px solid #CCC;
-    }
-    .current-period-sub-header-partial{
-      color: #B4B5A8;
-      font-size: 14px;
-      background-color: #F4F2EC;
-      border-bottom: 2px solid #CCC;
-    }
-    .current-period-sub-header{
-      color: #6D7280;
-      font-size: 14px;
-      background-color: #F4F2EC;
-      border-bottom: 2px solid #CCC;
-    }
-    .desease-name{
-      text-align: left;
-      color: #2C4856;
-    }
-    .prevoius-value{
-      color: #2C4856;
-    }
-    .current-value-partial{
-      color: #B4B5A8;
-      background-color: #F4F2EC;
-    }
-    .current-value{
-      color: #2C4856;
-      background-color: #F4F2EC;
-    }
-    .total-values{
-      td{
-        border-top: 2px solid #CCC;
-      }
-      .desease-name{
-        text-align: right;
-      }
-    }
-  }
+.RMNCH-box {
+	padding-top: 30px;
+	font-weight: bold;
+	border-bottom: 3px solid #CCC;
+
+	.RMNCH-table {
+		font-size: 20px;
+
+		table {
+			width: 100%;
+			text-align: center;
+			vertical-align: top;
+			border-collapse: collapse;
+		}
+
+		.diagnosis-header {
+			color: #135897;
+			border-bottom: 2px solid #CCC;
+		}
+
+		.previous-period-header {
+			color: #6D7280;
+		}
+
+		.current-period-header {
+			background-color: #F4F2EC;
+			color: #9C8568;
+		}
+
+		.previous-period-sub-header {
+			color: #6D7280;
+			font-size: 14px;
+			border-bottom: 2px solid #CCC;
+		}
+
+		.current-period-sub-header-partial {
+			color: #B4B5A8;
+			font-size: 14px;
+			background-color: #F4F2EC;
+			border-bottom: 2px solid #CCC;
+		}
+
+		.current-period-sub-header {
+			color: #6D7280;
+			font-size: 14px;
+			background-color: #F4F2EC;
+			border-bottom: 2px solid #CCC;
+		}
+
+		.desease-name {
+			text-align: left;
+			color: #2C4856;
+		}
+
+		.prevoius-value {
+			color: #2C4856;
+		}
+
+		.current-value-partial {
+			color: #B4B5A8;
+			background-color: #F4F2EC;
+		}
+
+		.current-value {
+			color: #2C4856;
+			background-color: #F4F2EC;
+		}
+
+		.total-values {
+			td {
+				border-top: 2px solid #CCC;
+			}
+
+			.desease-name {
+				text-align: right;
+			}
+		}
+	}
 }
 
-.deaths-box{
-  padding-top: 30px;
-  font-weight: bold;
-  border-bottom: 3px solid #CCC;
-  .total-pop{
-    color: #2C4856;
-    font-size: 20px;
-    font-weight: bold;
-    display: inline-block;
-    padding: 20px;
-    span{
-      font-size: 30px;
-    }
-  }
-  .value-item{
-    display: inline-block;
-    padding: 6px;
-    border-right: 1px solid #CCC;
-    display: inline-block;
-    padding: 0px 20px;
-    div:first-child{
-      font-size: 14px;
-      color: #B4B5A8;
-    }
-    div:last-child{
-      font-size: 20px;
-      color: #6D7280;
-    }
-  }
+.deaths-box {
+	padding-top: 30px;
+	font-weight: bold;
+	border-bottom: 3px solid #CCC;
+
+	.total-pop {
+		color: #2C4856;
+		font-size: 20px;
+		font-weight: bold;
+		display: inline-block;
+		padding: 20px;
+
+		span {
+			font-size: 30px;
+		}
+	}
+
+	.value-item {
+		display: inline-block;
+		padding: 6px;
+		border-right: 1px solid #CCC;
+		display: inline-block;
+		padding: 0 20px;
+
+		div:first-child {
+			font-size: 14px;
+			color: #B4B5A8;
+		}
+
+		div:last-child {
+			font-size: 20px;
+			color: #6D7280;
+		}
+	}
 }
 
-.map{
-  height: 450px;
-  width: 600px;
-  overflow: hidden;
-  .map-container {
-    float: none;
-  }
-  .legend-box:hover{
-    opacity: 1;
-  }
-  .legend-box{
-    height: 128px;
-    width: 265px;
-    background: #F1F1F1;
-    position: relative;
-    border: 1px solid #2c4856;
-    left: 300px;
-    bottom: 150px;
-    color: #2c4856;
-    opacity: 0.7;
-    >div{
-      
-    }
-    .legend-title{
-      height: 25px;
-      padding: 10px
-    }
-    .legend-item{
-      height: 20px;
-      padding: 2px 10px;
-      font-size: 13px;
-      >div{
-        display: inline-block;
-      }
-      .current-icon{
-        width: 10px;
-        height: 10px;
-        border: 1px solid #57595d;
-        border-radius: 10px;
-        background: #980707;
-        margin-right: 5px;
-      }
-      .other-icon{
-        width: 10px;
-        height: 10px;
-        border: 1px solid #57595d;
-        border-radius: 10px;
-        background: #6C8EAD;
-        margin-right: 5px;
-      }
-      .boundary-icon{
-        width: 10px;
-        border: 1px solid #9C8568;
-        margin-right: 5px;
-        margin-bottom: 4px;
-      }
-    }
-  }
+.map {
+	height: 450px;
+	width: 600px;
+	overflow: hidden;
+
+	.map-container {
+		float: none;
+	}
+
+	.legend-box:hover {
+		opacity: 1;
+	}
+
+	.legend-box {
+		height: 128px;
+		width: 265px;
+		background: #F1F1F1;
+		position: relative;
+		border: 1px solid #2c4856;
+		left: 300px;
+		bottom: 150px;
+		color: #2c4856;
+		opacity: 0.7;
+
+		> div {}
+
+		.legend-title {
+			height: 25px;
+			padding: 10px;
+		}
+
+		.legend-item {
+			height: 20px;
+			padding: 2px 10px;
+			font-size: 13px;
+
+			> div {
+				display: inline-block;
+			}
+
+			.current-icon {
+				width: 10px;
+				height: 10px;
+				border: 1px solid #57595d;
+				border-radius: 10px;
+				background: #980707;
+				margin-right: 5px;
+			}
+
+			.other-icon {
+				width: 10px;
+				height: 10px;
+				border: 1px solid #57595d;
+				border-radius: 10px;
+				background: #6C8EAD;
+				margin-right: 5px;
+			}
+
+			.boundary-icon {
+				width: 10px;
+				border: 1px solid #9C8568;
+				margin-right: 5px;
+				margin-bottom: 4px;
+			}
+		}
+	}
 }
 
-.ward-report-container{
-  width: 1150px;
-  max-width: 1150px;
-  align-items: center;
-  margin: auto;
-  overflow-x: auto;
-  .location-box{
-    div{
-      width: calc(33% + 2px) !important;
-    }
-  }
+.ward-report-container {
+	width: 1150px;
+	max-width: 1150px;
+	align-items: center;
+	margin: auto;
+	overflow-x: auto;
+
+	.location-box {
+		div {
+			width: calc(33% + 2px) !important;
+		}
+	}
 }
