--- a/dashboard-ui/src/routes/dashboard/routes/report/report.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/report/report.scss
@@ -11,6 +11,7 @@
 	color: #2CA4C4;
 	font-size: 20px;
 	font-weight: bold;
+	display: inline-block;
 }
 
 .download {
@@ -285,6 +286,19 @@
 		}
 	}
 }
+
+.value-legend{
+	display: inline-block;
+    float: right;
+    font-size: 15px;
+    font-weight: normal;
+    background: #f4f2ec;
+    color: #2c4856;
+    padding: 10px;
+    word-spacing: 5px;
+    margin-right: 15px;
+}
+
 
 .RMNCH-box {
 	padding-top: 30px;
