adding region shape for regional facility

--- a/dashboard-ui/src/routes/dashboard/routes/report/report.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/report/report.scss
@@ -502,6 +502,12 @@
 				margin-right: 5px;
 				margin-bottom: 4px;
 			}
+			.district-boundary-icon {
+				width: 10px;
+				border: 1px solid #6C8EAD;
+				margin-right: 5px;
+				margin-bottom: 4px;
+			}
 		}
 	}
 }
