--- a/dashboard-ui/src/routes/dashboard/routes/report/report.css
+++ b/dashboard-ui/src/routes/dashboard/routes/report/report.css
@@ -340,6 +340,11 @@
         border: 1px solid #9C8568;
         margin-right: 5px;
         margin-bottom: 4px; }
+      .map .legend-box .legend-item .district-boundary-icon {
+        width: 10px;
+        border: 1px solid #6C8EAD;
+        margin-right: 5px;
+        margin-bottom: 4px; }
 
 .ward-report-container {
   width: 1150px;
