--- a/dashboard-ui/src/components/map.scss
+++ b/dashboard-ui/src/components/map.scss
@@ -33,3 +33,11 @@ circle.clickeable{
 		z-index: 1005;
 	}
 }
+
+.top{
+  z-index: 1500;
+    cursor: row-resize;
+}
+.regular{
+    cursor: pointer;
+}
