--- a/dashboard-ui/src/routes/dashboard/routes/generator/components/textSearch.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/generator/components/textSearch.scss
@@ -7,7 +7,7 @@ body {
 }
 
 .react-autosuggest__input {
-  width: 800px;
+  width: 440px;
   height: 30px;
   padding: 10px 20px;
   font-family: Helvetica, sans-serif;
@@ -85,11 +85,10 @@ body {
 }
 
 .text-search-container{
-  width: 1200px;
-  max-width: 1200px;
+  width: 100%;
+  margin-bottom: 30px;
   -ms-flex-align: center;
   align-items: center;
-  margin: auto;
   background: white;
   border: 1px solid #acacac;
   >div{
