--- a/dashboard-ui/src/routes/dashboard/routes/landing/landing.css
+++ b/dashboard-ui/src/routes/dashboard/routes/landing/landing.css
@@ -52,6 +52,7 @@
     .landing-page .report-options .option-paragraph {
       height: 85px;
       padding-left: 120px;
+      padding-right: 20px;
       color: #2C4856;
       font-size: 14px; }
     .landing-page .report-options .facility-icon {
