--- a/dashboard-ui/src/routes/dashboard/routes/landing/landing.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/landing/landing.scss
@@ -60,6 +60,7 @@
 		.option-paragraph{
 			height: 85px;
     		padding-left: 120px;
+    		padding-right: 20px;
    			color: #2C4856;
     		font-size: 14px;
 		}
