--- a/dashboard-ui/src/routes/dashboard/routes/report/report.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/report/report.scss
@@ -84,7 +84,7 @@
 }
 
 .location-box {
-	> div {
+	>div {
 		width: calc(25% - 2px);
 		height: 50px;
 		background-color: #F4F2EC;
@@ -109,6 +109,7 @@
 	}
 
 	.location-value {
+		width: 60% !important;
 		font-weight: bold;
 	}
 }
@@ -523,7 +524,7 @@
 	overflow-x: auto;
 
 	.location-box {
-		div {
+		>div {
 			width: calc(33% + 2px) !important;
 		}
 	}
