--- a/dashboard-ui/src/routes/dashboard/routes/report/report.css
+++ b/dashboard-ui/src/routes/dashboard/routes/report/report.css
@@ -472,3 +472,31 @@
   display: inline-block;
   height: 15px;
   width: 20px; }
+
+.js-plotly-plot .trace.bars path {
+  pointer-events: none !important; }
+
+.chart-legends {
+  padding-left: 30px; }
+  .chart-legends > div {
+    display: inline-block; }
+  .chart-legends .legend-color {
+    width: 16px;
+    height: 16px; }
+  .chart-legends .legend-label {
+    padding: 0px 20px 0px 5px;
+    font-size: 12px;
+    height: 16px;
+    color: #444444;
+    line-height: 10px;
+    vertical-align: middle; }
+
+.infolayer text {
+  font-size: 11px !important;
+  fill: #444444 !important;
+  font-weight: bold !important; }
+
+.xaxislayer-above text {
+  font-size: 11px !important;
+  fill: #444444 !important;
+  font-weight: bold !important; }
