--- a/dashboard-ui/src/routes/dashboard/routes/landing/landing.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/landing/landing.scss
@@ -32,6 +32,9 @@
   	    color: #b59666;
   	    margin-bottom: 50px;
   	}
+    .button-description{
+      margin-bottom: -5px;
+    }
   	.report-options{
   		align-items: center;
   	    margin: auto;
