--- a/dashboard-ui/src/routes/dashboard/routes/report/report.css
+++ b/dashboard-ui/src/routes/dashboard/routes/report/report.css
@@ -15,7 +15,12 @@
 .download {
   display: block;
   text-align: right;
-  margin-bottom: 40px; }
+  margin-bottom: 40px;
+  margin: 0 5%;
+  overflow: hidden;
+  width: 90%; }
+  .download.full {
+    margin-bottom: -80px; }
   .download a {
     color: #668DAA;
     font-size: 11px;
@@ -70,7 +75,7 @@
     background-repeat: no-repeat; }
   .download .separator {
     margin: 0px 10px;
-    border-left: 1px solid;
+    border-left: 2px solid #eeeeee;
     height: 30px;
     height: 35px;
     display: inline-block;
@@ -78,22 +83,22 @@
 
 .report-header {
   color: #2C4856;
-  font-size: 30px;
-  font-weight: bold;
-  border-top: 1px solid #CCC;
-  border-bottom: 4px solid #CCC;
-  padding-left: 25px;
-  height: 60px;
-  line-height: 60px;
-  margin-bottom: 20px;
-  background-color: #F4F2EC; }
+  font-size: 34px;
+  font-weight: 500;
+  height: 90px;
+  line-height: 80px;
+  background-color: #f5f6f8;
+  width: 90%;
+  padding-left: 5%;
+  padding-right: 5%; }
   .report-header > div {
     display: inline-block; }
   .report-header .download {
     border: 1px solid red; }
   .report-header .period-selector-container {
     float: right;
-    line-height: 45px; }
+    line-height: 45px;
+    margin-top: 15px; }
     .report-header .period-selector-container > div > div {
       display: inline-block;
       line-height: 1px;
@@ -111,7 +116,7 @@
 
 .location-box > div {
   width: calc(25% - 2px);
-  height: 50px;
+  height: 60px;
   background-color: #F4F2EC;
   border-top: 2px solid #CCC;
   border-bottom: 2px solid #CCC; }
@@ -121,13 +126,14 @@
 
 .location-box div {
   display: inline-block;
-  line-height: 30px;
+  line-height: 40px;
   text-align: center;
   color: #2C4856; }
 
 .location-box .location-title {
   padding: 10px;
-  font-size: 13px; }
+  font-size: 14px;
+  font-weight: 600; }
 
 .location-box .location-value {
   width: 60% !important;
@@ -135,7 +141,10 @@
 
 .population-box {
   font-weight: bold;
-  border-bottom: 3px solid #CCC; }
+  border-bottom: 3px solid #eeeeee;
+  width: 90%;
+  margin: 30px 5%;
+  padding-bottom: 30px; }
   .population-box > div {
     display: inline-block;
     width: 50%;
@@ -148,10 +157,16 @@
     font-weight: bold; }
     .population-box .total-pop span {
       font-size: 30px; }
+  .population-box .value-label {
+    margin-bottom: 10px; }
   .population-box .value-item {
     display: inline-block;
-    padding: 14px;
-    border-right: 1px solid #CCC; }
+    border-right: 2px solid #eeeeee;
+    padding-left: 0;
+    padding-right: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    width: 15%; }
     .population-box .value-item div:first-child {
       font-size: 14px;
       color: #B4B5A8; }
@@ -197,116 +212,159 @@
 .top-ten-deseases {
   padding-top: 30px;
   font-weight: bold;
-  border-bottom: 3px solid #CCC; }
+  border-bottom: 3px solid #eeeeee;
+  margin-left: 5%;
+  margin-right: 5%;
+  width: 90%; }
+  .top-ten-deseases .sub-title {
+    padding: 20px 10px 10px 0; }
+  .top-ten-deseases .download {
+    margin: 30px 0 0 0;
+    width: 100%; }
   .top-ten-deseases .top-ten-diagnosis-table {
-    font-size: 20px; }
+    font-size: 18px;
+    padding-top: 10px; }
+    .top-ten-deseases .top-ten-diagnosis-table .sub-title {
+      margin-bottom: 30px; }
     .top-ten-deseases .top-ten-diagnosis-table table {
       width: 100%;
       text-align: center;
       vertical-align: top;
       border-collapse: collapse; }
+      .top-ten-deseases .top-ten-diagnosis-table table tr:nth-child(even) {
+        background-color: #f6f6f6; }
+      .top-ten-deseases .top-ten-diagnosis-table table tr:nth-child(2) {
+        background-color: #ffffff; }
+      .top-ten-deseases .top-ten-diagnosis-table table td {
+        padding-bottom: 7px;
+        padding-top: 7px; }
     .top-ten-deseases .top-ten-diagnosis-table .diagnosis-header {
+      background-color: #ffffff;
       color: #135897;
-      border-bottom: 2px solid #CCC; }
+      border-bottom: 2px solid #eeeeee;
+      text-align: left; }
     .top-ten-deseases .top-ten-diagnosis-table .previous-period-header {
-      color: #6D7280; }
+      background-color: #ffffff;
+      color: #967f63;
+      padding-top: 7px; }
       .top-ten-deseases .top-ten-diagnosis-table .previous-period-header > div {
         display: inline-block; }
     .top-ten-deseases .top-ten-diagnosis-table .current-period-header {
       background-color: #F4F2EC;
-      color: #9C8568; }
+      color: #9C8568;
+      padding-top: 7px; }
       .top-ten-deseases .top-ten-diagnosis-table .current-period-header > div {
         display: inline-block; }
     .top-ten-deseases .top-ten-diagnosis-table .previous-period-sub-header {
-      color: #6D7280;
+      color: #967f63;
       font-size: 14px;
-      border-bottom: 2px solid #CCC; }
+      border-bottom: 2px solid #eeeeee; }
     .top-ten-deseases .top-ten-diagnosis-table .previous-period-sub-header-partial {
-      color: #B4B5A8;
+      color: #967f63;
       font-size: 14px;
-      border-bottom: 2px solid #CCC; }
+      border-bottom: 2px solid #eeeeee;
+      background-color: #ffffff; }
     .top-ten-deseases .top-ten-diagnosis-table .current-period-sub-header-partial {
-      color: #B4B5A8;
+      color: #967f63;
       font-size: 14px;
       background-color: #F4F2EC;
-      border-bottom: 2px solid #CCC; }
+      border-bottom: 2px solid #eeeeee; }
     .top-ten-deseases .top-ten-diagnosis-table .current-period-sub-header {
-      color: #6D7280;
+      color: #967f63;
       font-size: 14px;
       background-color: #F4F2EC;
-      border-bottom: 2px solid #CCC; }
+      border-bottom: 2px solid #eeeeee; }
     .top-ten-deseases .top-ten-diagnosis-table .desease-name {
       text-align: left;
-      color: #2C4856; }
+      color: #5b5b5b; }
     .top-ten-deseases .top-ten-diagnosis-table .prevoius-value {
       color: #2C4856; }
     .top-ten-deseases .top-ten-diagnosis-table .previous-value-partial {
       color: #B4B5A8; }
     .top-ten-deseases .top-ten-diagnosis-table .current-value-partial {
-      color: #B4B5A8;
+      color: #676767;
       background-color: #F4F2EC; }
     .top-ten-deseases .top-ten-diagnosis-table .current-value {
       color: #2C4856;
       background-color: #F4F2EC; }
     .top-ten-deseases .top-ten-diagnosis-table .total-values td {
-      border-top: 2px solid #CCC; }
+      border-top: 2px solid #eeeeee; }
     .top-ten-deseases .top-ten-diagnosis-table .total-values .desease-name {
       text-align: right; }
 
 .value-legend {
   float: left;
-  font-size: 15px;
+  font-size: 13px;
   font-weight: normal;
   color: #2c4856;
   word-spacing: 5px;
   margin-right: 15px; }
 
 .RMNCH-box {
-  padding-top: 30px;
+  padding-top: 80px;
   font-weight: bold;
-  border-bottom: 3px solid #CCC; }
+  border-bottom: 3px solid #eeeeee;
+  margin-bottom: 50px;
+  margin-left: 5%;
+  margin-right: 5%;
+  width: 90%; }
+  .RMNCH-box .download {
+    margin: 0;
+    width: 100%; }
   .RMNCH-box .RMNCH-table {
-    font-size: 20px; }
+    font-size: 18px; }
+    .RMNCH-box .RMNCH-table .sub-title {
+      padding: 20px 10px 10px 0; }
     .RMNCH-box .RMNCH-table table {
       width: 100%;
       text-align: center;
       vertical-align: top;
       border-collapse: collapse; }
+      .RMNCH-box .RMNCH-table table tr:nth-child(even) {
+        background-color: #f6f6f6; }
+      .RMNCH-box .RMNCH-table table tr:nth-child(2) {
+        background-color: #ffffff; }
+      .RMNCH-box .RMNCH-table table td {
+        padding-bottom: 7px;
+        padding-top: 7px; }
     .RMNCH-box .RMNCH-table .diagnosis-header {
-      color: #135897;
-      border-bottom: 2px solid #CCC; }
+      color: #967f63;
+      border-bottom: 2px solid #eeeeee;
+      text-align: left; }
     .RMNCH-box .RMNCH-table .previous-period-header {
-      color: #6D7280; }
+      color: #967f63;
+      padding-top: 7px; }
     .RMNCH-box .RMNCH-table .current-period-header {
       background-color: #F4F2EC;
-      color: #9C8568; }
+      color: #967f63;
+      padding-top: 7px; }
     .RMNCH-box .RMNCH-table .previous-period-sub-header {
-      color: #6D7280;
+      color: #967f63;
       font-size: 14px;
-      border-bottom: 2px solid #CCC; }
+      border-bottom: 2px solid #eeeeee; }
     .RMNCH-box .RMNCH-table .current-period-sub-header-partial {
       color: #B4B5A8;
       font-size: 14px;
       background-color: #F4F2EC;
-      border-bottom: 2px solid #CCC; }
+      border-bottom: 2px solid #eeeeee; }
     .RMNCH-box .RMNCH-table .current-period-sub-header {
-      color: #6D7280;
+      color: #967f63;
       font-size: 14px;
       background-color: #F4F2EC;
-      border-bottom: 2px solid #CCC; }
+      border-bottom: 2px solid #eeeeee; }
     .RMNCH-box .RMNCH-table .desease-name {
       text-align: left;
-      color: #2C4856; }
+      color: #5b5b5b; }
     .RMNCH-box .RMNCH-table .prevoius-value {
       color: #2C4856; }
     .RMNCH-box .RMNCH-table .current-value-partial {
       color: #B4B5A8;
       background-color: #F4F2EC; }
     .RMNCH-box .RMNCH-table .current-value {
-      color: #2C4856;
+      color: #676767;
       background-color: #F4F2EC; }
     .RMNCH-box .RMNCH-table .total-values td {
-      border-top: 2px solid #CCC; }
+      border-top: 2px solid #eeeeee; }
     .RMNCH-box .RMNCH-table .total-values .desease-name {
       text-align: right; }
 
@@ -325,7 +383,7 @@
   .deaths-box .value-item {
     display: inline-block;
     padding: 6px;
-    border-right: 1px solid #CCC;
+    border-right: 2px solid #eee;
     display: inline-block;
     padding: 0 20px; }
     .deaths-box .value-item div:first-child {
@@ -340,7 +398,7 @@
   width: 600px;
   overflow: hidden; }
   .map .map-container {
-    float: none; }
+    float: right; }
   .map .legend-box:hover {
     opacity: 1; }
   .map .legend-box {
@@ -405,11 +463,10 @@
         margin-bottom: 4px; }
 
 .ward-report-container {
-  width: 1150px;
-  max-width: 1150px;
   align-items: center;
   margin: auto;
-  overflow-x: auto; }
+  overflow-x: auto;
+  width: 100%; }
   .ward-report-container .location-box > div {
     width: calc(33% + 2px) !important; }
 
@@ -420,6 +477,7 @@
   background-size: 25px 25px;
   background-position: center;
   height: 25px;
+  margin-top: 17px;
   width: 25px;
   padding: 15px 10px;
   cursor: pointer; }
@@ -431,6 +489,7 @@
   background-size: 25px 25px;
   background-position: center;
   height: 25px;
+  margin-top: 17px;
   width: 25px;
   padding: 15px 10px;
   cursor: pointer; }
@@ -442,6 +501,7 @@
   background-size: 25px 25px;
   background-position: center;
   height: 25px;
+  margin-top: 17px;
   width: 25px;
   padding: 15px 10px;
   cursor: pointer; }
