--- a/dashboard-ui/src/routes/dashboard/routes/landing/landing.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/landing/landing.scss
@@ -53,7 +53,8 @@
           margin-left: 0;
         }
         &:hover{
-          
+          border: 2px solid #ededed;
+          background-color: #f2f2f2;
         }
   		}
 
